src/runtime/tests/golden/errors/33_bare_typeparam_not_subtype/source.z42
namespace Demo;

class Animal { }
class Vehicle { }

class Container<T, U> where U: T {
    Container() { }
}

void Main() {
    var c = new Container<Animal, Vehicle>();
}
